hw06/test/zm-hw6-not-a-class-callStm.fmj
public int main() { 
    class C0 c;
    int a;
    c = new C0();
    a.func(1, 2, 34, 12); // error
    return 0;
}

public class C0 {
    int id;

    public int func(int a, int b, int c){
        return 0;
    }
}